# doorbell-mcu

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  partitions.csv  sdkconfig
main/: CMakeLists.txt  adc.c  adc.h  api.c  api.h  battery.c  battery.h  debug.c  debug.h  firmware.c  firmware.h  flash.c  flash.h  log.h  main.c  pin.h  provisioning.c  provisioning.h  sleep.c  sleep.h  tasks.c  tasks.h  wifi.c  wifi.h
scripts/: flash.sh  idf.sh  monitor.sh
